[package]
name = "engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "engine"
# crate-type = ["cdylib"]

[dependencies]
# pyo3 = { version = "*", features =  ["extension-module"] }

[[example]]
name = "two_body"
path = "examples/two_body.rs"

[[example]]
name = "circle"
path = "examples/circle.rs"